Stop stretching of images

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ img {
     display: inline;
     width: 200px;
     height: 100px;
+    overflow: hidden;
 }
 #footer {
     width: 100%;
